# azhura-cbt

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  AGENT_PROMPT_CBT_SCAFFOLDING.md  API_CONTRACT.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package.json  vite.config.ts
.claude/: ecc-tools.json  identity.json
.codegraph/: .gitignore  daemon.pid
.codex/: AGENTS.md
.github/workflows/: ci.yml  docker-publish.yml  promote.yml  student-release.yml
apps/console/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
apps/e2e/: .env.example  package.json  playwright.config.ts  tsconfig.json
apps/student/: .env.example  index.html  package.json  vitest.config.ts
apps/student/src-tauri/: Cargo.toml  tauri.conf.json
apps/student/src-tauri/capabilities/: default.json
apps/student/src-tauri/src/: kbd_lock.rs  lib.rs  main.rs
backend/: .dockerignore  .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
backend/migrations/: 0000_wide_black_bird.sql  0001_bent_tigra.sql  0002_colorful_jane_foster.sql  0003_cool_yellow_claw.sql  0004_sudden_meggan.sql  0005_panoramic_nebula.sql  0006_flimsy_masque.sql  0007_parallel_thor.sql  0008_passing_grade.sql  0009_striped_master_chief.sql  0010_big_outlaw_kid.sql  0011_natural_thor_girl.sql  0011_paused_at_session.sql  0012_great_green_goblin.sql  0013_solid_susan_delgado.sql  0014_slow_serpent_society.sql  0015_add_initial_password.sql  (+1 more)
backend/src/: seed.ts  (+4 more)
docs/: CODE_SIGNING.md  DEPLOY.md  RELEASE_STUDENT.md
scripts/: deploy-codesign-cert.ps1  gen-codesign-cert.ps1
src/: main.tsx
src-tauri/: tauri.conf.json
wiki/: FAQ-Troubleshooting.md  Home.md  Panduan-Admin.md  Panduan-Pengawas.md  Panduan-Siswa.md  _Sidebar.md
(+416 files in other folders)
