[package]
name = "azhura-exam"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "azhura_exam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
# Encrypted-at-rest credential storage (#129): the student JWT is persisted in
# an IOTA Stronghold snapshot instead of plaintext localStorage on native.
# Pinned to the same major as the JS plugin (@tauri-apps/plugin-stronghold).
tauri-plugin-stronghold = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# L3 keyboard lockdown (#27): Win32 low-level keyboard hook. Pinned to the
# same major as tauri's own `windows` dependency to avoid a duplicate build.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
] }

# Stronghold (#129) derives its snapshot key with argon2, which pulls in scrypt.
# scrypt is unusably slow when compiled at the default dev opt-level, so the
# Tauri docs recommend bumping just this package to opt-level 3 even in debug.
[profile.dev.package.scrypt]
opt-level = 3

